# bela-coupled-oscillators

./: .gitignore  CMakeLists.txt  coupled_oscillators.cpp  coupled_oscillators.hpp  defines.hpp  mass_interaction.cpp  mass_interaction.hpp  render.cpp  stiffness_matrix.cpp  stiffness_matrix.hpp
